Revert "Fixed bounce animation going off screen"
This reverts commit 67c7bf57c7533edb892e4ad7ce43a2a2519cd95f.

--- a/css/website.css
+++ b/css/website.css
@@ -39,30 +39,29 @@ section {
 	z-index: 999;
 	color: #ffffff;
 }
+
 .brand span {
 	font-size: 3em;
 }
 
 .intro-scroll {
 	cursor: pointer;
-	height:50px;
 	color: #ffffff;
+	z-index: 999;
+	position: absolute; 
 	margin: auto;
-}
-.intro-scroll span {
-	position: absolute;
-	bottom: 36px; 
+	top: 94%; 
 	left: 0; 
+	bottom: 0; 
 	right: 0;
+	width: 75px;
 }
 .intro-scroll i {
-	-webkit-animation: bounce 0.75s linear 5.5s infinite;
-	-moz-animation: bounce 0.75s linear 5.5s infinite;
-	animation: bounce 0.75s linear 5.5s infinite;
-	position: absolute;
-	right: 0;
-	left: 0; 
-	bottom: 8px; 
+	animation-name: bounce;
+	animation-delay: 6s;
+    animation-duration: 0.75s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
  }
  @keyframes bounce {
     0%   {padding: 0em;}
